# health-data-analysis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: keep-docs-in-sync.mdc
app/: __main__.py  cli.py  config.py  db.py  explore.py  logging.py  main.py  rate_limit.py
app/jobs/: catapult_pull.py  fitbit_pull.py  personal_hr.py  scheduler.py  strava_pull.py
app/models/: __init__.py  base.py  personal.py  raw.py  team.py  tokens.py  unified.py
app/normalizers/: registry.py
app/providers/: base.py  registry.py  token_store.py
app/routes/: ingest.py  oauth_callback.py  team.py
app/schemas/: common.py  ingest.py  team.py
app/services/: readiness.py
app/webhooks/: garmin.py
data/: hr_calibration_dataset.csv  hr_calibration_dataset.md  hr_calibration_truth.csv
docs/: ARCHITECTURE.md  ML_SYSTEM.md  SCHEMA.md
hr_selection/: __init__.py  config.py  evaluate.py  train.py
migrations/: env.py
notebooks/: 01_coverage.ipynb  02_cross_provider_agreement.ipynb  03_signal_relationships.ipynb  04_lifesnaps_analysis.ipynb  05_synthetic_demo.ipynb  06_hr_source_selection.ipynb  07_hr_model_comparison.ipynb  08_personal_calibration_showcase.ipynb
scripts/: backtest_calibration.py  build_lifesnaps_subset.py  build_showcase_notebook.py  demo_calibration_convergence.py  fetch_bigideas_step.py  fetch_hr_datasets.py  gen_calibration_dataset.py  gen_synthetic_hr.py  modal_train.py  normalize_galaxyppg.py  seed_synthetic.py
tests/: conftest.py  test_calibration_dataset.py  test_fitbit.py  test_garmin.py  test_hr_features.py  test_hr_priors.py  test_hr_synthetic_formats.py  test_hr_training.py  test_oura.py  test_personal_hr.py  test_strava.py  test_team.py  test_whoop.py  test_withings.py
(+78 files in other folders)
